Revert "@ https://take.ms/cS5Vt — make sure this (A) covers the bottom in short cases"
This reverts commit d16275d9fcd14e31721f058717611fc03c689bc1.

--- a/front/assets/styles/layout.less
+++ b/front/assets/styles/layout.less
@@ -9,6 +9,7 @@ html, body, .content-wrapper {
   display: flex;
   position: relative;
   flex-direction: column;
+  box-shadow: 11px 0px 15px 5px;
 
   .top-bar {
     flex: 0 0 auto;
