--- a/front/assets/styles/slideout.less
+++ b/front/assets/styles/slideout.less
@@ -38,7 +38,6 @@ body {
   z-index: 0;
   width: @slideout-menu-width;
   overflow-y: auto;
-  display: none;
   -webkit-overflow-scrolling: touch;
 }
 
